# UP-ELection-Ontology-Engine

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  KNOWLEDGE_GRAPH_FALLBACK_FIX.md  KNOWLEDGE_GRAPH_HEATMAP_INTEGRATION.md  PITCH_PRESENTATION.md  README.md  SCRAPING_GUIDE.md  SECURITY.md  alembic.ini  docker-compose.yml  gorakhpur-booth-architecture-review.md  gorakhpur-master-plan.md  ingestion_config.json  manage.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_nlp_direct.py  test_ac_fallback.py
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-release.yml  ci.yml  daily-checks.yml  docker-publish.yml  wiki-sync.yml
analytics/: booth_metrics.py  contradiction_detector.py  conversion_opportunity.py  data_quality.py  geo_backfill.py  merge_web_enrichment.py  myneta_complete_enrichment.py  myneta_enrichment.py  myneta_graph.py  narrative_detector.py  scheme_gap_analysis.py
analytics/surname_caste/: __init__.py  aggregator.py  caste_mapper.py  influence_scorer.py  run_pipeline.py  surname_extractor.py
api/: db.py  main.py  queries.py  reasoning.py
backend/: __init__.py  cache.py  db.py  logging_config.py  main.py  metrics.py  queries.py  reasoning.py  schemas.py  validation.py
backend/routers/: ac.py  booths.py  graph.py  health.py  reasoning.py
client_end/: package-lock.json  package.json
client_end/app/: DashboardCharts.tsx  globals.css  layout.tsx  page.tsx
client_end/components/: AlertStrip.tsx  ConfidenceBadge.tsx  GovBanner.tsx  GovFooter.tsx  GovHeader.tsx  Header.tsx  LeanBadge.tsx  MetricCard.tsx  PulseBar.tsx  SectionHeader.tsx  Sidebar.tsx  StatCard.tsx  ThemeProvider.tsx
client_end/lib/: api.ts  chartTheme.ts
client_end/public/: myneta_graph.json
dashboard/: app.py
dashboard/components/: war_room.py
dashboard/pages/: ac_overview.py  booth_summary.py  candidate_panel.py  caste_analysis.py  data_quality.py  event_timeline.py  evidence_feed.py  geo_intelligence.py  intelligence_query.py  knowledge_graph.py  recommendations.py
data/: unified_data_ingestion_plan.md
data/Benficiary/: beneficiary_data.json  pm_kisan_samman_nidhi.json  pmkisan-gorakhpur-beneficiaries-as-on-2021-12-07.json  pmkisan_public_form_status.json  (+3 more)
docker/: Dockerfile.backend  Dockerfile.dashboard  Dockerfile.frontend  Dockerfile.nginx  Dockerfile.scraper  nginx.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATA_SOURCES.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  ETL_NEO4J_PIPELINE.md  MODULE_REFERENCE.md  RUNBOOKS.md  SCRAPING_GUIDE.md  SETUP.md  ontology_spec.md  setup.md  team_presentation_guide.md
etl/: aggregate_eroll_segments.py  aggregate_form20_results.py  compute_booth_election_metrics.py  constants.py  enrich_profiles_voteshare.py  expand_aliases.py  geocode_booths.py  ingest_eroll_data.py  ingest_political_data.py  ingest_tcpd_voteshare.py  ingest_youtube_videos.py  kruti_to_unicode.py  parse_form20_xls.py  parse_myneta_affidavits.py  process_youtube_signals.py  pulse_event_prep.py  seed_ls2024_results.py  stage_youtube_to_pulse.py  transform_candidates.py  transform_census.py  transform_geography.py  transform_news.py  transform_panchayats.py  transform_schemes.py  update_booth_results.py
graph/: README.md  constraints.cypher  constraints_v2.cypher  constraints_voter.cypher
ingestion/: analyzer.py  ddp_affidavits.py  ddp_electoral_roll.py  egramswaraj_schemes.py  electoral_demographics.py  grievance_scraper.py  ingest_all_features.py  ingest_form20_lean.py  ingest_poolboothdata.py  multi_news_scraper.py  myneta_candidates.py  news_scraper.py  youtube_comments.py  youtube_videos.py
k8s/: backend-deployment.yaml  pgbouncer.yaml
nlp/: __init__.py  alias_expander.py  bhashini.py  entity_resolver.py  extractor.py  geo_resolver.py  lang_detect.py  pipeline.py  schemas.py
pipeline/: __init__.py  compat.py
scripts/: SCRAPER_README.md  cleanup_json_names.py  db_setup.py  export_neo4j.py  facebook_gorakhpur_scraper.py  form20_to_json.py  generate_ts_interfaces.py  master_scraper_orchestrator.py  newspaper_scraper.py  pdf_to_json.py  scraped_data_processor.py  scraper_config.json  seed_booth_master.py  setup_scrapers.sh  test_scatter.py  translation_cache.json  verify_election_results_qa.py  youtube_comments_scraper.py  youtube_videos_scraper.py
tests/: conftest.py
web-news-scraper/: README.md  articles_collection.json  bjp_filter.py  gorakhpur_scraper.py  pipeline.py  requirements.txt  scraper_menu.py  simple_scraper.py
(+946 files in other folders)
