[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gorakhpur-kg"
version = "0.1.0"
description = "Booth-level political intelligence for Gorakhpur Urban, UP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Shared Utilities / Core
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "tenacity>=8.3.0",
    "tqdm>=4.66.4",
    "requests>=2.32.3",
    "httpx>=0.27.0",

    # Data Processing & Parsing
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "python-dateutil>=2.9.0",
    "openpyxl>=3.1",
    "xlrd==1.2.0",
    "pdfplumber>=0.11.1",
    "lxml>=5.2.2",
    "tabula-py>=2.9.3",
    "feedparser>=6.0.11",

    # Database & Messaging
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "neo4j>=5.20.0",
    "redis>=5.0.4",
    "celery[redis]>=5.4.0",

    # LLM & NLP
    "google-genai>=0.2.0",
    "groq>=0.4",
    "sarvamai>=0.1.7",
    "instructor>=1.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.1",
    "langdetect>=1.0.9",
    "indic-nlp-library>=0.91",

    # API & Observability
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "slowapi>=0.1.9",
    "prometheus-client>=0.20.0",

    # Dashboard & Visualization
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "folium>=0.16.0",
    "streamlit-folium>=0.20.0",
    "altair>=5.3.0",

    # Web Scraping & Media
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.3",
    "newspaper3k>=0.2.8",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    "yt-dlp>=2024.5.27",
    "google-api-python-client>=2.131.0",

    # Orchestration
    "prefect>=3.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "pytest-timeout==2.3.1",
    "testcontainers[postgres]==4.7.2",

    # Code quality
    "ruff==0.4.4",
    "black==24.4.2",
    "mypy==1.10.0",

    # Security audit
    "pip-audit==2.7.3",

    # Migrations
    "alembic==1.13.1",

    # Notebooks
    "jupyter==1.0.0",
    "ipykernel==6.29.4",
]

[tool.setuptools.packages.find]
include = ["backend*", "pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pyright]
include = ["."]
extraPaths = ["digital-democracy-pipeline/src"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingModuleSource = "none"
reportMissingImports = false

